--- a/themes/scd/static/horizon/components/_checkboxes.scss
+++ b/themes/scd/static/horizon/components/_checkboxes.scss
@@ -3,6 +3,7 @@
 // --------------------------------------------------
 
 @import "/horizon/lib/mdi/scss/icons";
+
 .themable-checkbox {
 
   input[type=checkbox] {
@@ -11,7 +12,7 @@
     & + label {
       @extend .mdi-checkbox-blank-outline;
 
-      &:before {
+      &::before {
         @extend .mdi;
         font-size: $font-size-h5;
       }
@@ -21,7 +22,7 @@
     &:checked + label {
       @extend .mdi-checkbox-marked;
 
-      &:before {
+      &::before {
         color: $brand-primary;
       }
     }
