--- a/themes/scd/static/horizon/components/_navbar.scss
+++ b/themes/scd/static/horizon/components/_navbar.scss
@@ -3,3 +3,24 @@
   color: $gray-light;
   font-size: $font-size-small;
 }
+
+.navbar-inverse {
+  background-color: #00418d;
+  border-color: #002742;
+  background-image: linear-gradient(to bottom, #004d8d 0%, #00418d 100%);
+}
+
+.navbar-header {
+  li:hover,
+  li:active {
+    background-color: #003562;
+    cursor: pointer;
+  }
+  li {
+    display: inline-block;
+    color: #fff;
+    font-size: 16px;
+    padding: 10px 15px;
+    border-right: 1px solid #002742;
+  }
+}
