--- a/themes/scd/templates/header/_brand.html
+++ b/themes/scd/templates/header/_brand.html
@@ -2,4 +2,7 @@
 
 <a class="navbar-brand" href="{% site_branding_link %}" target="_self">
     {% include "material/cloud-logo.svg" %}
-</a><li data-toggle="modal" data-target="#terms">Terms</li><li data-toggle="modal" data-target="#sla">SLA</li><li data-toggle="modal" data-target="#faq">FAQs</li>
+</a>
+<li data-toggle="modal" data-target="#terms">Terms</li>
+<li data-toggle="modal" data-target="#sla">SLA</li>
+<li data-toggle="modal" data-target="#faq">FAQs</li>
