--- a/themes/scd/static/horizon/components/_hamburger.scss
+++ b/themes/scd/static/horizon/components/_hamburger.scss
@@ -102,15 +102,17 @@
   }
   100% {
     @include rotate(45deg);
-    margin: 3% 37%;
+    margin: 6% 37%;
     width: 75%;
   }
 }
 
 @include keyframes(md-hamburger-icon--slide-after) {
+  0% {
+  }
   100% {
     @include rotate(-45deg);
-    margin: 3% 37%;
+    margin: 6% 37%;
     width: 75%;
   }
 }
@@ -119,20 +121,27 @@
   0% {
     @include rotate(-180deg);
   }
+  100% {
+  }
 }
 
 @include keyframes(md-hamburger-icon--slide-before-from) {
   0% {
     @include rotate(45deg);
-    margin: 3% 37%;
+    margin: 6% 37%;
     width: 75%;
+  }
+  100% {
   }
 }
 
 @include keyframes(md-hamburger-icon--slide-after-from) {
   0% {
     @include rotate(-45deg);
-    margin: 3% 37%;
+    margin: 6% 37%;
     width: 75%;
   }
+  100% {
+  }
 }
+
