--- a/themes/scd/static/horizon/_styles.scss
+++ b/themes/scd/static/horizon/_styles.scss
@@ -1,5 +1,6 @@
 @import "icons";
 @import "components/context_selection";
+@import "components/footer";
 @import "components/messages";
 @import "components/checkboxes";
 @import "components/hamburger";
@@ -7,8 +8,11 @@
 @import "components/magic_search";
 @import "components/navbar";
 @import "components/sidebar";
-@import "components/footer";
 @import "components/auth";
+
+.login .splash-logo {
+  width: 215px;
+}
 
 // General Layout Changes
 #sidebar {
@@ -20,7 +24,6 @@
   transition: padding-left $sidebar-animation;
   display: block;
 
-  padding: 0 140px 0 160px;
 }
 
 #main_content {
@@ -28,6 +31,7 @@
   min-width: unset;
   width: 100%;
 }
+
 
 // Border radius is unattractive here
 .navbar {
@@ -52,6 +56,9 @@
   }
 
   &-inverse {
+    background-color: #00418d;
+    border-color: #002742;
+    background-image: linear-gradient(to bottom, #004d8d, #00418d);
     .navbar-brand {
       svg {
         fill: $navbar-inverse-link-active-color;
@@ -66,35 +73,28 @@
       }
     }
 
-    @media (max-width: $screen-sm) {
-      .dropdown-header {
-        color: $navbar-inverse-link-color;
-      }
+    .dropdown-header {
+      color: $navbar-inverse-link-color;
     }
   }
 }
 
 .navbar-brand {
-  line-height: 50px;
-  height: 50px;
-  border-right: 1px solid #002742;
   svg {
-    height: 36px;
-    margin-top: 4px;
+    height: $navbar-height - $padding-small-horizontal*2;
+    margin-top: $padding-small-horizontal;
     display: inline-block;
   }
 }
 
 // Hamburger menu only shows on smaller screen sizes
 .navbar-header .md-hamburger {
-  display: none;
+  display: inline-block;
+  float:left;
 
-  @media (max-width: $screen-lg) {
-    display: inline-block;
-    & > button {
-      padding: $navbar-padding-vertical $navbar-padding-horizontal;
-      height: $navbar-height;
-    }
+  & > button {
+    padding: $navbar-padding-vertical $navbar-padding-horizontal;
+    height: $navbar-height;
   }
 }
 
@@ -113,10 +113,8 @@
   z-index: 2;
   transition: all $hamburger-transition;
 
-  @media (max-width: $screen-lg) {
-    &.active {
-      visibility: visible;
-      opacity: 1;
-    }
+  &.active {
+    visibility: visible;
+    opacity: 1;
   }
 }
