--- a/themes/scd/templates/header/_brand.html
+++ b/themes/scd/templates/header/_brand.html
@@ -1,6 +1,6 @@
 {% load branding %}
 
-<a class="navbar-brand" href="{% site_branding_link %}" target="_self">
+<a class="navbar-brand" href="/">
     {% include "material/cloud-logo.svg" %}
 </a>
 <li data-toggle="modal" data-target="#terms">Terms</li>
