made textboxes and dropdowns more noticable
added a new file called _input_forms.scss to make input areas more
visible

--- a/themes/scd/static/horizon/_styles.scss
+++ b/themes/scd/static/horizon/_styles.scss
@@ -9,6 +9,7 @@
 @import "components/navbar";
 @import "components/sidebar";
 @import "components/auth";
+@import "components/input_forms";
 
 .login .splash-logo {
   width: 215px;
