made launch instance button stand out
also changed input_forms to custom_theming

--- a/themes/scd/static/horizon/_styles.scss
+++ b/themes/scd/static/horizon/_styles.scss
@@ -9,7 +9,7 @@
 @import "components/navbar";
 @import "components/sidebar";
 @import "components/auth";
-@import "components/input_forms";
+@import "components/custom_theming";
 
 .login .splash-logo {
   width: 215px;
