--- a/themes/scd/static/horizon/components/_custom_theming.scss
+++ b/themes/scd/static/horizon/components/_custom_theming.scss
@@ -1,3 +1,8 @@
+a#instances__action_launch-ng{
+  background-color: #00488d;
+  color:white;
+}
+
 .form-control{
   border-radius: 5px !important;
   padding-left: 5px !important;
