--- a/themes/scd/templates/base.html
+++ b/themes/scd/templates/base.html
@@ -32,10 +32,11 @@
     {% endblock %}
     <div id='main_content'>
         <div id="modal_wrapper"></div>
-        
+
         {% include "horizon/_messages.html" %}
         <div id="pageload" class="modal-backdrop in"></div>
         <div id='content_body'>
+          <div id="md-hamburger-mask"></div>
             <div class='container-fluid'>
                 <div class="row">
                     <div class="col-xs-12">
