--- a/themes/scd/templates/html/faq.html
+++ b/themes/scd/templates/html/faq.html
@@ -5,7 +5,6 @@
     <li><a href="#resources">Can I increase the RAM or CPUs?</a></li>
     <li><a href="#quota">Can I increase my quota?</a></li>
     <li><a href="#disk">Can I increase my disk size?</a></li>
-    <li><a href="#stopping">What is the <span class="label label-warning">STOPPING</span> state?</a></li>
     <li><a href="#os">Do you support other Linux variants/version?</a></li>
     <li><a href="#pakiti">Why are Pakiti and rsyslog running on my VM?</a></li>
 </ol>
@@ -13,7 +12,7 @@
 <br />
 <h3><a name="login" href="#login" class="faq">1. How do I login?</a></h3>
 <p>
-    You can SSH into your machines with your federal credentials eg. <strong>ssh fed12345@vm20.nubes.stfc.ac.uk</strong>. You can also associate your SSH public key to your account for passwordless login.
+    You can SSH into your machines with your federal credentials eg. <strong>ssh fed12345@vm20.nubes.stfc.ac.uk</strong>. You can also associate your SSH public key to your account for passwordless login by creating or importing a keypair <a href="https://openstack.nubes.rl.ac.uk/project/access_and_security/">here</a>
 </p>
 
 <br />
@@ -26,41 +25,35 @@ Yes, once you have logged in with your federal credentials you will have permiss
 <br />
 <h3><a name="gui" href="#gui" class="faq">3. Can I get a GUI session?</a></h3>
 <p>
-    Click the <button type="button" class="btn btn-blue btn-xs"><img src="/assets/images/icon-display.png" style="width:14px;margin-top:-2px" /></button> button to get an interactive GUI session inside your browser.
+    Click the dropdown under Actions and select Console to get an interactive GUI session inside your browser.
 </p>
 
 <br />
-<h3><a name="resources" href="#resources" class="faq">4. Can I increase the RAM or CPUs?</a></h3>
+<h3><a name="resources" href="#resources" class="faq">4. Can I increase the RAM or CPUs of a Virtual Machine?</a></h3>
 <p>
-    Currently we only provide a standard set of resources for each machine. If you would like to discuss increasing these values email us at <a href="mailto:cloud-support@helpdesk.gridpp.rl.ac.uk">cloud-support@helpdesk.gridpp.rl.ac.uk</a>.
+    We provide a standard set of flavors for Virtual Machines. If you would like to other combinations of resources, please email us at <a href="mailto:cloud-support@helpdesk.gridpp.rl.ac.uk">cloud-support@helpdesk.gridpp.rl.ac.uk</a>. An existing virtual machine can have its resources increased by powering off the VM and selecting resize in the Actions menu.
 </p>
 
 <br />
-<h3><a name="quota" href="#quota" class="faq">5. Can I increase my quota?</a></h3>
+<h3><a name="quota" href="#quota" class="faq">5. Can I increase my group's quota?</a></h3>
 <p>
     Yes, if you would like your quota increased email us at <a href="mailto:cloud-support@helpdesk.gridpp.rl.ac.uk">cloud-support@helpdesk.gridpp.rl.ac.uk</a>.
 </p>
 
 <br />
-<h3><a name="disk" href="#disk" class="faq">6. Can I increase my disk size?</a></h3>
+<h3><a name="disk" href="#disk" class="faq">6. Can I get more disk space?</a></h3>
 <p>
-    Yes, if you would like access to more storage email us at <a href="mailto:cloud-support@helpdesk.gridpp.rl.ac.uk">cloud-support@helpdesk.gridpp.rl.ac.uk</a>.
+    Yes, larger flavors come with more disk space. You can also create a volume and attach this to your instance. <a href="mailto:cloud-support@helpdesk.gridpp.rl.ac.uk">cloud-support@helpdesk.gridpp.rl.ac.uk</a>.
 </p>
 
 <br />
-<h3><a name="stopping" href="#stopping" class="faq">7. What is the <span class="label label-warning" style="font-size:50%;vertical-align:middle">STOPPING</span> state?</a></h3>
+<h3><a name="os" href="#os" class="faq">7. Do you support other Linux variants/version?</a></h3>
 <p>
-    When a VM is deleted, a snapshop is taken an stored for a period of time. This is for the reason of security and traceability.
-    <p>
+    Yes, we support uploading your own images to the SCD Cloud however in doing this you become responsible for maintaining these images and ensuring that they comply with the SCD Cloud Terms of Service. Please contact us to ask if we already provide a suitable image at <a href="mailto:cloud-support@helpdesk.gridpp.rl.ac.uk">cloud-support@helpdesk.gridpp.rl.ac.uk</a>.
+</p>
 
-        <br />
-        <h3><a name="os" href="#os" class="faq">8. Do you support other Linux variants/version?</a></h3>
-        <p>
-            Yes, if you would like to discuss adding different images or versions to the cloud, email us at <a href="mailto:cloud-support@helpdesk.gridpp.rl.ac.uk">cloud-support@helpdesk.gridpp.rl.ac.uk</a>.
-        </p>
-
-        <br />
-        <h3><a name="pakiti" href="#pakiti" class="faq">9. Why are Pakiti and rsyslog running on my VM?</a></h3>
-        <p>
-            These services are used for monitoring and security. Please refrain from stopping or changing the behaviour of either of these service. Please make sure you have read the <a href="tos.html">Terms of Service</a>.
-        </p>
+<br />
+<h3><a name="pakiti" href="#pakiti" class="faq">8. Why are Pakiti and rsyslog running on my VM?</a></h3>
+<p>
+    These services are used for monitoring and security. Please refrain from stopping or changing the behaviour of either of these service. Please make sure you have read the <a href="tos.html">Terms of Service</a>.
+</p>
