--- a/themes/scd/templates/html/faq.html
+++ b/themes/scd/templates/html/faq.html
@@ -19,7 +19,7 @@
 <h3><a name="root" href="#root" class="faq">2. Can I get root access?</a></h3>
 Yes, once you have logged in with your federal credentials you will have permission to use <strong>sudo</strong>.
 <p class="text-danger">
-    NOTE: you must not change the root password or remove entires from the authorized_keys file for the root account. Please make sure you have read the <a href="tos.html">Terms of Service</a>.
+    NOTE: you must not change the root password or remove entires from the authorized_keys file for the root account. Please make sure you have read the <a data-toggle="modal" data-target="#terms"><span data-toggle="modal" data-target="#faq" style="cursor:pointer; color:inherit">Terms of Service</span></a>.
 </p>
 
 <br />
@@ -55,5 +55,10 @@ Yes, once you have logged in with your federal credentials you will have permiss
 <br />
 <h3><a name="pakiti" href="#pakiti" class="faq">8. Why are Pakiti and rsyslog running on my VM?</a></h3>
 <p>
-    These services are used for monitoring and security. Please refrain from stopping or changing the behaviour of either of these service. Please make sure you have read the <a href="tos.html">Terms of Service</a>.
+    These services are used for monitoring and security.
+    Please refrain from stopping or changing the behaviour of either of these services.
+    Please make sure you have read the
+    <a data-toggle="modal" data-target="#terms">
+      <span data-toggle="modal" data-target="#faq" style="cursor:pointer; color:inherit">Terms of Service</span>
+    </a>.
 </p>
