--- a/themes/scd/static/horizon/components/_sidebar.scss
+++ b/themes/scd/static/horizon/components/_sidebar.scss
@@ -20,6 +20,10 @@
     height: 100%;
   }
 
+  #sidebar-drawer {
+    background: $body-bg;
+  }
+
   .openstack-dashboard {
     & > a {
       font-weight: bold;
