Redid the faq fix
will make a seperate commit fixing the links

--- a/themes/scd/templates/html/faq.html
+++ b/themes/scd/templates/html/faq.html
@@ -19,7 +19,7 @@
 <h3><a name="root" href="#root" class="faq">2. Can I get root access?</a></h3>
 Yes, once you have logged in with your federal credentials you will have permission to use <strong>sudo</strong>.
 <p class="text-danger">
-    NOTE: you must not change the root password or remove entires from the authorized_keys file for the root account. Please make sure you have read the <a data-toggle="modal" data-target="#terms"><span data-toggle="modal" data-target="#faq" style="cursor:pointer; color:inherit">Terms of Service</span></a>.
+    NOTE: you must not change the root password or remove entires from the authorized_keys file for the root account. Please make sure you have read the <a href="tos.html">Terms of Service</a>.
 </p>
 
 <br />
