--- a/themes/scd/templates/header/_brand.html
+++ b/themes/scd/templates/header/_brand.html
@@ -3,6 +3,6 @@
 <a class="navbar-brand" href="/">
     {% include "material/cloud-logo.svg" %}
 </a>
-<li data-toggle="modal" data-target="#terms">Terms</li>
-<li data-toggle="modal" data-target="#sla">SLA</li>
-<li data-toggle="modal" data-target="#faq">FAQs</li>
+<a class="navbar-text" target="_blank" href="https://stfc-cloud-docs.readthedocs.io/en/latest/policies/TermsOfService.html">Terms</a>
+<a class="navbar-text" target="_blank" href="https://stfc-cloud-docs.readthedocs.io/en/latest/policies/ServiceLevelAgreements.html">SLA</a>
+<a class="navbar-text" target="_blank" href="https://stfc-cloud-docs.readthedocs.io/en/latest/faqs.html">FAQ</a>
