--- a/themes/scd/templates/html/welcome.html
+++ b/themes/scd/templates/html/welcome.html
@@ -1,11 +1,29 @@
-<h1 class="page-header">Welcome to the SCD Cloud</h1>
+<h1 class="page-header">Welcome to the STFC Cloud</h1>
 <p>
     This service provides a private <abbr title="Infrastucture as a Service">IaaS</abbr> cloud resource for SCD users.
-    To start, select the login link at the top of the page and enter your federal username and password.
 </p>
 <p>
-    You should be aware that the SCD Cloud is still in active development. Please read the <a href="/tos">Terms of Service</a> before proceeding.
+    To start, login the right of the page:
 </p>
 <p>
-    For any questions, problems or ideas email us at <a href="mailto:cloud-support@helpdesk.gridpp.rl.ac.uk">cloud-support@helpdesk.gridpp.rl.ac.uk</a>
+    Select "Username and password" in the top dropdown if you have STFC Federal Credentials or have been given STFC Cloud Credentials then select "STFC Federal ID" or "Default" respectively in the second dropdown and log input
+</p>
+<p>
+    It will soon be possible to log in with either "IRIS IAM" "EGI Checkin" by selecting the appropriate option from the top dropdown box
+
+</p>
+<p>
+    You should be aware that the SCD Cloud is still in active development. Please read the <a  target="_blank" href="https://stfc-cloud-docs.readthedocs.io/en/latest/policies/TermsOfService.html">Terms of Service</a> before proceeding.
+</p>
+<p>
+    Documentation can be found at <a  target="_blank" href="https://stfc-cloud-docs.readthedocs.io/en/latest/">https://stfc-cloud-docs.readthedocs.io/en/latest/</a>
+</p>
+<p>
+    For any questions, problems or ideas email us at <a href="mailto:cloud-support@gridpp.rl.ac.uk">cloud-support@gridpp.rl.ac.uk</a>
+</p>
+<p>
+    You can sign up to our mailing list at <a  target="_blank" href="https://www.jiscmail.ac.uk/cgi-bin/webadmin?A0=STFC-CLOUD">https://www.jiscmail.ac.uk/cgi-bin/webadmin?A0=STFC-CLOUD</a> to be notified of any changes to the service.
+</p>
+<p>
+    You can also join our Slack to chat with the Cloud team and other users: <a  target="_blank" href="https://stfc-cloud.slack.com/">https://stfc-cloud.slack.com/</a>
 </p>
