--- a/themes/scd/static/bootstrap/_styles.scss
+++ b/themes/scd/static/bootstrap/_styles.scss
@@ -1,9 +1,9 @@
 // Based on Paper
 // Bootswatch
 // -----------------------------------------------------
-@import "/bootstrap/scss/bootstrap/mixins/vendor-prefixes";
+@import "/horizon/lib/bootstrap_scss/scss/bootstrap/mixins/vendor-prefixes";
 @import "/horizon/lib/bootswatch/paper/bootswatch";
-@import "/horizon/lib/roboto_fontface/css/roboto-fontface.scss";
+@import "/horizon/lib/roboto_fontface/css/roboto/sass/roboto-fontface.scss";
 
 
 
@@ -24,4 +24,8 @@
 }
 .alert a:not(.close).btn-danger {
   color: $btn-danger-color;
+}
+
+.alert a.close {
+  font-size: $font-size-h5;
 }
