--- a/themes/scd/static/horizon/_icons.scss
+++ b/themes/scd/static/horizon/_icons.scss
@@ -15,31 +15,42 @@ $icon-swap: (
   asterisk: 'star',
   angle-right: 'arrow-right',
   angle-left: 'arrow-left',
+  arrow-down: 'arrow-down',
+  arrow-up: 'arrow-up',
   ban: 'block-helper',
   bars: 'menu',
   bug: 'bug',
+  calendar: 'calendar',
+  caret-up: 'menu-up',
   caret-down: 'menu-down',
+  caret-up: 'menu-up',
   check: 'check',
   chevron-down: 'chevron-down',
   chevron-left: 'chevron-left',
   chevron-right: 'chevron-right',
   chevron-up: 'chevron-up',
+  circle-o: 'radiobox-blank',
   close: 'close',
   cloud-download: 'cloud-download',
   cloud-upload: 'cloud-upload',
+  code: 'code-tags',
   cog: 'settings',
   desktop: 'desktop-mac',
+  dot-circle-o: 'radiobox-marked',
   download: 'download',
+  edit: 'pencil',
   exchange: 'swap-horizontal',
   exclamation: 'exclamation',
   exclamation-circle: 'alert-circle',
   exclamation-triangle: 'alert',
   eye: 'eye',
   eye-slash: 'eye-off',
+  filter: 'filter-outline',
   folder: 'folder',
   folder-o: 'folder-outline',
   group: 'account-multiple',
   home: 'home',
+  info-circle: 'information-outline',
   link: 'link-variant',
   list-alt: 'view-list',
   minus: 'minus',
@@ -59,6 +70,8 @@ $icon-swap: (
   sort: 'sort',
   square: 'checkbox-blank',
   square-o: 'checkbox-blank-outline',
+  spin: 'reload',
+  star-o: 'star-outline',
   times: 'close',
   times-circle: 'close',
   trash: 'delete',
@@ -66,7 +79,7 @@ $icon-swap: (
   th: 'view-module',
   th-large: 'view-module',
   upload: 'upload',
-  unlink: 'close-circle-outline', // TODO: hurgleburgler: replace with 'link-variant-off' once we update MDI
+  unlink: 'link-variant-off',
   user: 'account',
   warning: 'alert',
 );
