Update email addresses for cloud theme

--- a/themes/scd/templates/html/faq.html
+++ b/themes/scd/templates/html/faq.html
@@ -31,25 +31,25 @@ Yes, once you have logged in with your federal credentials you will have permiss
 <br />
 <h3><a name="resources" href="#resources" class="faq">4. Can I increase the RAM or CPUs of a Virtual Machine?</a></h3>
 <p>
-    We provide a standard set of flavors for Virtual Machines. If you would like to other combinations of resources, please email us at <a href="mailto:cloud-support@helpdesk.gridpp.rl.ac.uk">cloud-support@helpdesk.gridpp.rl.ac.uk</a>. An existing virtual machine can have its resources increased by powering off the VM and selecting resize in the Actions menu.
+    We provide a standard set of flavors for Virtual Machines. If you would like to other combinations of resources, please email us at <a href="mailto:cloud-support@stfc.ac.uk">cloud-support@stfc.ac.uk</a>. An existing virtual machine can have its resources increased by powering off the VM and selecting resize in the Actions menu.
 </p>
 
 <br />
 <h3><a name="quota" href="#quota" class="faq">5. Can I increase my group's quota?</a></h3>
 <p>
-    Yes, if you would like your quota increased email us at <a href="mailto:cloud-support@helpdesk.gridpp.rl.ac.uk">cloud-support@helpdesk.gridpp.rl.ac.uk</a>.
+    Yes, if you would like your quota increased email us at <a href="mailto:cloud-support@stfc.ac.uk">cloud-support@stfc.ac.uk</a>.
 </p>
 
 <br />
 <h3><a name="disk" href="#disk" class="faq">6. Can I get more disk space?</a></h3>
 <p>
-    Yes, larger flavors come with more disk space. You can also create a volume and attach this to your instance. <a href="mailto:cloud-support@helpdesk.gridpp.rl.ac.uk">cloud-support@helpdesk.gridpp.rl.ac.uk</a>.
+    Yes, larger flavors come with more disk space. You can also create a volume and attach this to your instance. <a href="mailto:cloud-support@stfc.ac.uk">cloud-support@stfc.ac.uk</a>.
 </p>
 
 <br />
 <h3><a name="os" href="#os" class="faq">7. Do you support other Linux variants/version?</a></h3>
 <p>
-    Yes, we support uploading your own images to the SCD Cloud however in doing this you become responsible for maintaining these images and ensuring that they comply with the SCD Cloud Terms of Service. Please contact us to ask if we already provide a suitable image at <a href="mailto:cloud-support@helpdesk.gridpp.rl.ac.uk">cloud-support@helpdesk.gridpp.rl.ac.uk</a>.
+    Yes, we support uploading your own images to the SCD Cloud however in doing this you become responsible for maintaining these images and ensuring that they comply with the SCD Cloud Terms of Service. Please contact us to ask if we already provide a suitable image at <a href="mailto:cloud-support@stfc.ac.uk">cloud-support@stfc.ac.uk</a>.
 </p>
 
 <br />
