--- a/themes/scd/templates/html/welcome.html
+++ b/themes/scd/templates/html/welcome.html
@@ -19,7 +19,7 @@
     Documentation can be found at <a  target="_blank" href="https://stfc-cloud-docs.readthedocs.io/en/latest/">https://stfc-cloud-docs.readthedocs.io/en/latest/</a>
 </p>
 <p>
-    For any questions, problems or ideas email us at <a href="mailto:cloud-support@gridpp.rl.ac.uk">cloud-support@gridpp.rl.ac.uk</a>
+    For any questions, problems or ideas email us at <a href="mailto:cloud-support@stfc.ac.uk">cloud-support@stfc.ac.uk</a>
 </p>
 <p>
     You can sign up to our mailing list at <a  target="_blank" href="https://www.jiscmail.ac.uk/cgi-bin/webadmin?A0=STFC-CLOUD">https://www.jiscmail.ac.uk/cgi-bin/webadmin?A0=STFC-CLOUD</a> to be notified of any changes to the service.
