--- a/themes/scd/templates/html/sla.html
+++ b/themes/scd/templates/html/sla.html
@@ -1,4 +1,4 @@
-<p>The SCD Cloud is a service developed for use within Scientific Computing and the wider STFC for developing and supporting projects. SCD Cloud usage must comply with the <a data-toggle="modal" data-target="#terms"><span data-toggle="modal" data-target="#sla" style="cursor:pointer; color:inherit">Terms of Service</span></a>. If you have any questions regarding the following, please contact <a href="mailto:cloud-support@gridpp.rl.ac.uk">cloud-support@gridpp.rl.ac.uk</a></p>
+<p>The SCD Cloud is a service developed for use within Scientific Computing and the wider STFC for developing and supporting projects. SCD Cloud usage must comply with the <a data-toggle="modal" data-target="#terms"><span data-toggle="modal" data-target="#sla" style="cursor:pointer; color:inherit">Terms of Service</span></a>. If you have any questions regarding the following, please contact <a href="mailto:cloud-support@stfc.ac.uk">cloud-support@stfc.ac.uk</a></p>
 <p>By continuing to log in you accept the following Service Level for Virtual Machines (VMs):</p>
 <ul>
     <li>Support</li>
