--- a/themes/scd/static/horizon/components/_navbar.scss
+++ b/themes/scd/static/horizon/components/_navbar.scss
@@ -2,6 +2,10 @@
   @extend .mdi-stop;
   color: $gray-light;
   font-size: $font-size-small;
+
+  &:before {
+    content: "\F4DB";
+  }
 }
 .navbar-header {
   li {
